Editing: tenses of values

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,15 +35,15 @@
     <div class="container">
         <div class="row justify-content-center text-center">
             <div class="col-lg-5">
-                <h2 class="h4"><a href="/about#inclusiveness">Inclusiveness</a></h2>
+                <h2 class="h4"><a href="/about#inclusive">Inclusive</a></h2>
                 <p>We've made an accessible space for learning that's centered around people.</p>
             </div>
             <div class="col-lg-5">
-                <h2 class="h4"><a href="/about#freedom">Freedom</a></h2>
+                <h2 class="h4"><a href="/about#free">Free</a></h2>
                 <p>We'll always bring you this space for free and create opportunities for collaboration.</p>
             </div>
             <div class="col-lg-5">
-                <h2 class="h4"><a href="/about#trustworthiness">Trustworthiness</a></h2>
+                <h2 class="h4"><a href="/about#trustworthy">Trustworthy</a></h2>
                 <p>Everything is written only by us on topics we're experts in, with thorough research.</p>
             </div>
         </div>
