--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,6 +10,9 @@
 /** Import highlight.js */
 // @import "highlight.js/scss/github-dark-dimmed";
 
+/** Import KaTeX */
+@import "katex/dist/katex";
+
 /** Import theme styles */
 @import "common/fonts";
 @import "common/global";
