Editing: reword values on home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
 {{ define "sidebar-prefooter" }}
 <section class="section section-sm">
     <div class="justify-content-center text-center">
-        <h2 class="mt-0">What this blog is all about</h1>
+        <h2 class="mt-0">This space is...</h1>
     </div>
     <div class="container">
         <div class="row justify-content-center text-center">
@@ -40,7 +40,7 @@
             </div>
             <div class="col-lg-5">
                 <h2 class="h4"><a href="/about#free">Free</a></h2>
-                <p>We'll always bring you this space for free and create opportunities for collaboration.</p>
+                <p>We bring you this open source space and all its information without limits.</p>
             </div>
             <div class="col-lg-5">
                 <h2 class="h4"><a href="/about#trustworthy">Trustworthy</a></h2>
