--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@
         <div class="row justify-content-center text-center">
             <div class="col-lg-5">
                 <h2 class="h4"><a href="/about#inclusive">Inclusive</a></h2>
-                <p>We've made an accessible space for learning that's centered around people.</p>
+                <p>We've made an empathetic, accessible learning space that's centered around people.</p>
             </div>
             <div class="col-lg-5">
                 <h2 class="h4"><a href="/about#free">Free</a></h2>
