--- a/assets/scss/components/_alerts.scss
+++ b/assets/scss/components/_alerts.scss
@@ -1,6 +1,8 @@
 .alert {
   font-family: $font-family-monospace;
   font-size: $font-size-sm;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .alert-icon {
