--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -46,3 +46,37 @@ body::before {
 [data-dark-mode] body::before {
   opacity: 1;
 }
+
+.glossary-tooltip {
+  display: inline-block;
+  position: relative;
+  border-bottom: 1px dotted black;
+  color: black;
+  text-decoration: none !important;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.glossary-tooltip:before {
+  content: attr(title);
+  position: absolute;
+  
+  top: 50%;
+  transform: translateY(-50%);
+  left: 100%;
+  margin-left: 15px;
+  
+  width: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  background: #000;
+  color: #fff;
+  text-align: center;
+
+  opacity: 0;
+  transition: 0.3s opacity;  
+}
+
+.glossary-tooltip:hover:before {
+  display: block;
+    opacity:1;
+}
