--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -40,7 +40,7 @@ body::before {
   background-image: url("/topo.svg");
   background-repeat: repeat;
   z-index: -1;
-  opacity: 0.4;
+  opacity: 0.35;
 }
 
 [data-dark-mode] body::before {
@@ -50,33 +50,29 @@ body::before {
 .glossary-tooltip {
   display: inline-block;
   position: relative;
-  border-bottom: 1px dotted black;
+  border-bottom: 1px dashed black;
   color: black;
   text-decoration: none !important;
   transition: opacity 0.3s, visibility 0.3s;
 }
 
 .glossary-tooltip:before {
-  content: attr(title);
-  position: absolute;
-  
-  top: 50%;
-  transform: translateY(-50%);
-  left: 100%;
-  margin-left: 15px;
-  
-  width: 200px;
-  padding: 10px;
-  border-radius: 10px;
-  background: #000;
-  color: #fff;
+  content: attr(data-title);
+  background: black;
+  color: white;
   text-align: center;
 
+  position: absolute;
+  transform: translateY(-100%);
+  width: 250px;
+  padding: 10px;
+  border-radius: 10px;
+
   opacity: 0;
-  transition: 0.3s opacity;  
+  transition: 0.3s opacity;
 }
 
 .glossary-tooltip:hover:before {
   display: block;
-    opacity:1;
+  opacity: 1;
 }
