--- a/layouts/partials/glossary-terms.html
+++ b/layouts/partials/glossary-terms.html
@@ -7,7 +7,7 @@
       {{- $pages = $pages | lang.Merge ($p.Resources.ByType "page") -}}
     {{- end -}}
   {{ end }}
-  {{- $.Scratch.Set "glossary_items"  $pages -}}
+  {{- $.Scratch.Set "glossary_items" $pages -}}
 {{- else -}}
-{{- errorf "[%s] Glossary Bundle not found for language. Create at least an index.md file inside docs/reference/glossary" site.Language.Lang -}}
+{{- errorf "[%s] Glossary Bundle not found for language. Create at least an index.md file inside glossary/" site.Language.Lang -}}
 {{- end -}}
