--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -56,23 +56,21 @@ body::before {
   transition: opacity 0.3s, visibility 0.3s;
 }
 
-.glossary-tooltip:before {
+.glossary-tooltip::before {
   content: attr(data-title);
   background: black;
   color: white;
   text-align: center;
-
   position: absolute;
   transform: translateY(-100%);
   width: 250px;
   padding: 10px;
   border-radius: 10px;
-
   opacity: 0;
   transition: 0.3s opacity;
 }
 
-.glossary-tooltip:hover:before {
+.glossary-tooltip:hover::before {
   display: block;
   opacity: 1;
 }
