--- a/layouts/shortcodes/glossary-tooltip.html
+++ b/layouts/shortcodes/glossary-tooltip.html
@@ -1,4 +1,4 @@
-{{- $id := .Get "term_id" -}}
+{{- $id := .Get "id" -}}
 {{- $text := .Get "text" -}}
 {{- partial "glossary-terms.html" $.Page -}}
 {{- $glossary_items := $.Page.Scratch.Get "glossary_items" -}}
@@ -7,13 +7,13 @@
 {{- else -}}
 {{- $term_info := $glossary_items.GetMatch (printf "%s.md" $id ) -}}
 {{- if not $term_info -}}
-{{- errorf "[%s] %q: %q is not a valid glossary term_id, see ./glossary/* for a full list" site.Language.Lang .Page.Path $id -}}
+{{- errorf "[%s] %q: %q is not a valid id, see ./glossary/* for a full list" site.Language.Lang .Page.Path $id -}}
 {{- end }}
 {{- with $term_info -}}
 {{- $text := $text | default $term_info.Title -}}
 {{- $glossary_home := "glossary" | relLangURL -}}
-{{- $external_link := $term_info.Params.full_link | default (printf "%s#term-%s" $glossary_home $id | safeURL  ) -}}
-{{- $tooltip :=  $term_info.Params.short_description | markdownify -}}
+{{- $external_link := printf "%s#term-%s" $glossary_home $id | safeURL  -}}
+{{- $tooltip :=  $term_info.Params.description | markdownify -}}
 
 {{- $tooltip := $tooltip | replaceRE "(?s)<a class='glossary-tooltip'.*?>(.*?).*</a>" "$1" | plainify -}}
 {{- $tooltip := trim $tooltip " \n" -}}
