Refactor: sort pages on glossary

--- a/layouts/_default/glossary.html
+++ b/layouts/_default/glossary.html
@@ -14,7 +14,8 @@
           {{- end -}}
         {{ end }}
       {{- $.Scratch.Set "glossary_items"  $pages -}}
-      {{- range $pages -}}
+      {{- $sortedPages := sort $pages ".Params.Title" -}}
+      {{- range $sortedPages -}}
         <h3><a href="{{ $.Page.RelPermalink }}#{{ replace .Params.Title " " "-" | lower }}">{{ .Params.Title }}</a></h3>
         {{ .Content }}
       {{- end -}}
