--- a/layouts/shortcodes/glossary-tooltip.html
+++ b/layouts/shortcodes/glossary-tooltip.html
@@ -12,7 +12,7 @@
 {{- with $term_info -}}
 {{- $text := $text | default $term_info.Title -}}
 {{- $glossary_home := "glossary" | relLangURL -}}
-{{- $external_link := printf "%s#term-%s" $glossary_home $id | safeURL  -}}
+{{- $external_link := printf "%s#%s" $glossary_home $id | safeURL  -}}
 {{- $tooltip :=  $term_info.Params.description | markdownify -}}
 
 {{- $tooltip := $tooltip | replaceRE "(?s)<a class='glossary-tooltip'.*?>(.*?).*</a>" "$1" | plainify -}}
