Refactor: only set glossary_items once and style entries

--- a/assets/scss/common/_glossary.scss
+++ b/assets/scss/common/_glossary.scss
@@ -31,3 +31,11 @@
   color: $body-color-dark;
   border-bottom: 1px dashed $body-color-dark;
 }
+
+.glossary-entry {
+  color: $body-color;
+}
+
+[data-dark-mode] .glossary-entry {
+  color: $body-color-dark;
+}
