Posts: Spring Security OAuth2.0 Client article draft

--- a/layouts/shortcodes/test-results.html
+++ b/layouts/shortcodes/test-results.html
@@ -1,4 +1,4 @@
 <details>
-  <summary>Expand to view test results!</summary>
+  <summary>Expand to view test results</summary>
   <pre><code class=nohighlight>{{ .Inner }}</code></pre>
 </details>
