--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -266,7 +266,7 @@ $navbar-dark-active-color:          $link-color-dark;
 }
 
 [data-dark-mode] body .doks-search::after {
-  color: $gray-300;
+  filter: invert(1);
 }
 
 [data-dark-mode] body .text-dark {
